[11.19] released ...
* Only MIME-encode words in header fields if they start with '=?' or end
  with '?=' (instead of encoding any words containing '?', '=', or '_'),
  and declare them as 'us-ascii' if they do not contain any bytes with the
  highest bit set (Bugreport by Suresh Ramasubramanian).

[11.18] released 12/9/04
* When the 'write' command asks for an attachment filename and a '|' is
  given as the first character, the attachment is piped to the rest of
  the string interpreted as a shell command (contributed by Stephen Isard).
* The ~p escape now includes recipients that are local files in its output
  (Bugreport by Bob Tennent).
* The 'ungood' and 'unjunk' commands put the wrong marking on the messages
  they were applied too (regardless of the database update they performed).
  'Ungood' now marks a message as being junk, and 'unjunk' clears the junk
  mark.
* A 'record-resent' variable has been introduced. If it is set, the 'resend'
  and 'Resend' commands save messages to the 'record' folder. (Proposed by
  Bob Tennent.)
* 'redirect' and 'Redirect' are available as aliases for 'resend' and
  'Resend', respectively (proposed by Bob Tennent).
* A 'forward' command has been introduced that behaves more like the
  forwarding mechanisms of other contemporary mail user agents. Along with
  it, there are 'fwdignore', 'fwdretain', 'unfwdignore', and 'unfwdretain'
  commands, and a 'fwdheading' variable. The 'forward' command is probably
  only useful with a 'fwdretain' command executed before. Such a command is
  executed by default in /etc/nail.rc for new installations; for other sites,
  it is recommended that it be added manually.
* Characters with width 0 (e.g. Unicode combining characters) are now handled
  correctly in header summaries.
* When a message in a multibyte character set like UTF-8 that was encoded
  as quoted-printable was printed and a multibyte character was separated