@@ -35,7 +35,7 @@
  * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  * SUCH DAMAGE.
  *
- *	Sccsid @(#)extern.h	2.150 (gritter) 12/2/04
+ *	Sccsid @(#)extern.h	2.151 (gritter) 12/25/04
  */
 
 /* aux.c */
@@ -85,6 +85,9 @@ enum okay makedir(const char *name);
 enum okay cwget(struct cw *cw);
 enum okay cwret(struct cw *cw);
 void cwrelse(struct cw *cw);
+void makeprint(struct str *in, struct str *out);
+char *prstr(const char *s);
+int prout(const char *s, size_t sz, FILE *fp);
 int asccasecmp(const char *s1, const char *s2);
 int ascncasecmp(const char *s1, const char *s2, size_t sz);
 char *asccasestr(const char *haystack, const char *xneedle);
@@ -359,8 +362,6 @@ enum okay maildir_remove(const char *name);
 /* main.c */
 int main(int argc, char *argv[]);
 /* mime.c */
-size_t makeprint(char *s, size_t l);
-char *makeprint0(char *s);
 int mime_name_invalid(char *name, int putmsg);
 struct name *checkaddrs(struct name *np);
 char *gettcharset(void);
